--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.8",
     "expo": "^54.0.0",
     "expo-constants": "latest",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "latest",
     "expo-router": "latest",
     "expo-status-bar": "latest",
